# mpc_osqp_mcu

./: README.md  osqp_genarate.py  四轮八驱（4W8D）转向系统模型预测控制：基于OSQP的高效嵌入式平台实现.md
mpc/: mpc_calculations.c  osqp_configure.h
mpc_solver_4w8d/: CMakeLists.txt  bindings.cpp  emosqp.c  mpc_matrices.h  setup.py  workspace.c  workspace.h
mpc_solver_4w8d_lite/: mpc_4w8d_lite.c  mpc_4w8d_lite.h  test_mpc  test_mpc.c
